freest/test/prog/Invalid/Kinding/KindMismatch/KindMismatch.fst
module KindMismatch where

type Bad : 1S
type Bad = Int